# PFE

Code/: COUPLAGE.py  README.md
Code/Corrosion/: oxydation.py  oxydation_app.py  oxydation_test.py
Code/Corrosion/Inputs/: c_solver_corrosion_evolution_test_1.input  c_solver_corrosion_evolution_test_2.input  c_solver_corrosion_evolution_test_3.input  c_solver_corrosion_evolution_test_4.input  c_solver_corrosion_evolution_test_5.input
Code/Corrosion/Oxydation/c_solver_corrosion_evolution/src/: CMakeLists.txt  c_solver_corrosion_evolution_functions.c  c_solver_corrosion_evolution_functions.h  c_solver_corrosion_evolution_optimisation_functions.c  c_solver_corrosion_evolution_optimisation_functions.h  c_solver_corrosion_evolution_parameters.c  c_solver_corrosion_evolution_parameters.h  equadiff.c  equadiff.h  main.c
Code/Corrosion/Oxydation/c_solver_corrosion_evolution/tests/: CMakeLists.txt  CTestTestfileInstall.cmake  c_solver_corrosion_evolution_test_6.input  c_solver_corrosion_evolution_test_7.input  c_solver_corrosion_evolution_test_8.input  non_regression_tests.py  tests.sh
Code/Corrosion/Oxydation/c_solver_corrosion_evolution/tests/refs/: c_solver_corrosion_evolution_optimisation_1.output  c_solver_corrosion_evolution_test_2.output  c_solver_corrosion_evolution_test_3.output  c_solver_corrosion_evolution_test_4.output  c_solver_corrosion_evolution_test_5.output
Code/RIS/: Default.csv  RIS_GiMIK.py  RIS_MIK.py  RIS_app.py  RIS_sen.py  RIS_test.py  TNES_304.csv
Presentation/: Fiche descriptive.docx  Notes.docx  Planning du stage_chao.xlsx
Rapport/: Fiche de synthèse sur les attendus du Projet de Fin d’Études.docx  INFORMATION NÉCESSAIRE POUR ÉLABORER UNE CONVENTION DE PFE.docx  MetaModel.ipynb  RIS.ipynb  oxydation.ipynb
Temp/: Couplage.py  Nouveau Document Microsoft Word.docx  Nouveau Présentation Microsoft PowerPoint.pptx  RIS_INPUT.xlsx
Weekly report/: RIS_0320.html  RIS_0327.html  RIS_0403.html  RIS_0410.html  RIS_0417.html  RIS_0424.html  RIS_0429.html  RIS_0501.html  RIS_0511.html  RIS_0512.html  RIS_0703.html
(+255 files in other folders)
